upgrade to java 17 and spring boot 3.x #138